--- a/src/Mc.css
+++ b/src/Mc.css
@@ -16,6 +16,10 @@
   font-weight: 700;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .holder {
   width: 95%;
   padding-block: 2.5%;
@@ -27,6 +31,7 @@
 .LHS {
   width: 20%;
   height: 100%;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,8 +91,9 @@
 }
 
 .RHS {
+  margin-left: 20%;
   width: 80%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -211,6 +217,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .notIconHolder {
@@ -242,7 +249,6 @@
 .totalMessages {
   grid-area: tm;
   border: 1px solid var(--border1);
-  width: fit-content;
   height: 100%;
 }
 .messageVolume {
@@ -289,4 +295,40 @@
   align-items: center;
   justify-content: center;
   font-size: small;
+}
+
+@media only screen and (max-width: 600px) {
+  .holder {
+    margin: 0%;
+    overflow-y: scroll;
+    height: 100vh;
+  }
+  .LHS {
+    display: none;
+    width: 0%;
+  }
+  .RHS {
+    width: 60%;
+    align-items: center;
+  }
+  .rPage {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imgLogo {
+    width: 30px;
+    height: 30px;
+  }
+  .notifications {
+    display: flex;
+    flex-direction: column;
+    border: none;
+  }
+  .notcompHolder {
+    justify-content: start;
+  }
+  .topAgent {
+    min-height: 300px;
+  }
 }
